--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <li><a>Contact</a></li>
                         </ul>
                     </div>
-                    <a class="btn btn-ghost normal-case text-2xl lg:text-4xl">RIAZ'S MOTOR POINT</a>
+                    <a class="btn btn-ghost normal-case md:text-2xl lg:text-4xl">RIAZ'S MOTOR POINT</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu text-base menu-horizontal px-1">
