--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <h3 class="text-l mb-12 font-semibold text-center text-bike-primary">
                 Best bike collection
             </h3>
-            <div class=" grid grid-cols-1 ml-20 md:grid-cols-2 lg:grid-cols-3  gap-32  md:mx-28">
+            <div class=" grid grid-cols-1 ml-10 lg:ml-20 md:grid-cols-2 lg:grid-cols-3  gap-32  md:mx-28">
                 <img src="./images/others/feature-bike.png" alt="">
                 <img src="./images/others/feature-bike.png" alt="">
                 <img src="./images/others/feature-bike.png" alt="">
@@ -213,7 +213,7 @@
             <div class="grid gap-10 grid-cols-1  md:grid-cols-2  lg:grid-cols-3">
                 <!-- first card -->
                 <div class="card  bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/others/latest1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -225,7 +225,7 @@
                 </div>
                 <!-- second card -->
                 <div class="card  bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -237,7 +237,7 @@
                 </div>
                 <!-- third card -->
                 <div class="card  bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/others/latest1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
